fix alignment on home page when the latest update line breaks onto two lines

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -61,6 +61,11 @@ section#feature_block {
   border-left: 0px;
 }
 
+#feature_content p {
+  margin-top: 11px;
+  margin-bottom: 11px;
+}
+
 #version .digit, #version .point {
   height: 69px;
   display: block;
